# FARM-talent-iq

./: .gitignore  README.md  render.yaml
backend/: .pre-commit-config.yaml  Makefile  README.md  gunicorn.conf.py  pyproject.toml  requirements.in  requirements.txt
backend/app/: main.py  web.py
backend/app/api/: router.py  routes.py
backend/app/api/routes/: chats.py  sessions.py
backend/app/controllers/: chats.py  sessions.py
backend/app/core/: config.py  db.py  lifespan.py  logger.py  middleware.py
backend/app/dependencies/: auth.py
backend/app/depends/: clerk.py
backend/app/integrations/: clerk.py  inngest.py  stream.py
backend/app/lib/: clerk.py  config.py  db.py  inngest.py  protect_route.py  protected_route.py  stream.py
backend/app/models/: __init__.py  base.py  enums.py  session.py  user.py
backend/app/repositories/: session.py  user.py
backend/app/routes/: chats.py  sessions.py
backend/app/schemas/: session.py
backend/app/services/: chats.py  session_ids.py  sessions.py  stream.py
backend/requirements/: base.in  base.txt  dev.in  dev.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: RecentSessions.jsx
frontend/src/hooks/: useSessions.js  useStreamClient.js
frontend/src/lib/: axios.js  executionService.js
frontend/src/pages/: ProblemPage.jsx  SessionPage.jsx
observability/: docker-compose.yml
observability/prometheus/: prometheus.yml
